tdf#98168 sw: add mail merge from xlsx testcase

Commit 83b43ef2223b66484e0e90e7b614886e06f955b5 (sw mail merge: add
support for the new 'writer' connectivity driver, 2017-07-18) fixed
this, with:

> If we are at it, also accept xlsx next to xls.

But there was no test for that part.

Change-Id: Iffbd4d21e52700d38dc0a83cb5540fa10c062944